# PEA_Projekt_1

./: CMakeLists.txt  EKSPERYMENTY_README.md  main.cpp
Abstractions/: IAtspAlgorithm.ixx  IDataProvider.ixx
Algorithms/: BF.ixx  BFHeap.ixx  NN.ixx  RNN.ixx  RandomAlgorithm.ixx
Data/: FileDataProvider.ixx  RandomDataGenerator.ixx
DefinitelyNotADataStructures/: DefinitelyNotAVector.ixx
Infrastructure/: AlgorithmTester.ixx  CsvParser.ixx  CsvWriter.ixx  Parser.ixx
Models/: AlgorithmResult.ixx  TestData.ixx
Python/: plot_generator.py
Sprawozdanie/: Projekt1_Kwiek.tex
